--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>¿Quieres ver una película conmigo? 💖</title>
+    <title>¿Quieres ver una película conmigo?</title>
     <style>
         body {
             font-family: 'Comic Sans MS', cursive;
@@ -98,13 +98,17 @@
         noBtn.style.top = y + "px";
     });
 
-    document.getElementById("yes").addEventListener("click", () => {
-        const mensaje = encodeURIComponent(
-            "Siiii preciosote, obvio que quiero ver una película contigo este 14 de febrero"
-        );
-        window.open("https://wa.me/?text=" + mensaje, "_blank");
-    });
+document.getElementById("yes").addEventListener("click", () => {
+    const mensaje = encodeURIComponent(
+        "Si, preciosotee, obvio que quiero ver una película contigo"
+    );
+    window.open(
+        "https://wa.me/528771157389text=" + mensaje,
+        "_blank"
+    );
+});
 </script>
 
 </body>
 </html>
+
